# aop

./: .env.example  .gitignore  AI.md  README.md  aop_models.json  eslint.config.js  index.html  models.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  system_mcp.md  vite.config.ts
docs/: ARCHITECTURE.md  DIAGRAM.md  system.md  system_mcp.md
mcp-bridge/: package.json  tsconfig.json
mcp-bridge/src/: bridge.ts  index.ts  tools.ts  types.ts
mcp-bridge/test/: tools.test.ts
src/: App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial.sql  002_vector_chunks.sql  003_budget_requests.sql  004_mission_control_telemetry.sql  005_task_target_files.sql
src-tauri/src/: commands.rs  lib.rs  llm_adapter.rs  main.rs  model_intelligence.rs  model_registry.rs  mutation_pipeline.rs  mutation_revision.rs  runtime_config.rs  secret_vault.rs  task_runtime.rs
src-tauri/src/agents/: domain_leader.rs  mod.rs  orchestrator.rs  specialist.rs
src-tauri/src/db/: budget_requests.rs  metrics.rs  mod.rs  mutations.rs  tasks.rs  telemetry.rs
src-tauri/src/mcp_bridge/: client.rs  mod.rs  tool_caller.rs
src-tauri/src/vector/: indexer.rs  mod.rs  search.rs
src/components/: ConflictResolutionPanel.tsx  DiffReviewer.tsx  OrchestrationProgress.tsx  OrchestrationSummary.tsx  TaskActivityFeed.tsx  TaskBudgetPanel.tsx  TaskGraph.tsx  TokenBurnChart.tsx  aop-sidebar.tsx  nav-main.tsx  nav-secondary.tsx
src/hooks/: useTargetProjectConfig.ts  useTauri.ts
src/layouts/: AppLayout.tsx
src/lib/: format.ts  restartApply.ts
(+35 files in other folders)
