[package]
name = "aop"
version = "0.1.0"
description = "Autonomous Orchestration Platform"
authors = ["DerianAndre"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.92.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
tauri = { version = "2.10.0", features = [] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.18.0", features = ["v4"] }
sha2 = "0.10.9"
chrono = "0.4.42"
base64 = "0.22.1"
dotenvy = "0.15.7"
tauri-plugin-stronghold = "2.3.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "blocking", "rustls-tls"] }
similar = "2"

[dev-dependencies]
tempfile = "3.14.0"
